turn on CSP header risk

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 
       Turn this off by commenting it out, to resolve a risk
     -->
-<!--     <meta http-equiv="Content-Security-Policy" content="default-src 'unsafe-inline'"> -->
+    <meta http-equiv="Content-Security-Policy" content="default-src 'unsafe-inline'">
   </head>
 </html>
